<resources>
    <string name="app_name">Batiqu</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_upload">Detection</string>
    <string name="logo_description">batiqu app logo</string>
    <string name="welcome_title">BATIQU</string>
    <string name="description">Login to unlock the full experience</string>
    <string name="email_title">Email</string>
    <string name="email">email</string>
    <string name="password_title">password</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="account">don\'t have an account?</string>
    <string name="or">or</string>
    <string name="back_to_login_description">back to login</string>
    <string name="description2">Register to unlock the full experience</string>
    <string name="name_title">Name</string>
    <string name="username_hint">username</string>
    <string name="registerbutton">Register</string>
    <string name="daftar_favorit_kosong">The favorites list is empty, fill it as you wish :)</string>
    <string name="title_profile">Profile</string>
    <string name="button_camera">camera</string>
    <string name="button_gallery">gallery</string>
    <string name="Descrip">\n\tDescription aaaaaaaaaa aaaaaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaa aaaaaa aaaaaaaa aaaaaa aaaaaaaaa</string>
    <string name="description_description">enter a description for your upload</string>
    <string name="button_upload">Scan</string>
    <string name="upload_text">Know Your Batik, Love Your Culture</string>
    <string name="desc_name">"Batik Name : "</string>
    <string name="desc_loc">\n\tClick the maps for the nearest batik shop</string>
    <string name="thumbnail">thumbnail</string>
    <string name="icmaps">icon maps</string>
    <string name="alert_email">Enter your Email before login</string>
    <string name="empty_email">Invalid Email</string>
    <string name="empty_password">Can not be Empty</string>
    <string name="alert_password">Cannot be less than 8 characters</string>
    <string name="welcome_title2">welcome, let\'s learn together</string>
    <string name="register2">Register</string>
    <string name="adress_batik">Adress Batik</string>
    <string name="logout">logout</string>
    <string name="email_hint">email</string>
    <string name="desc_profile">Detail Account</string>
    <string name="create_acc">Create Account</string>
    <string name="button_scan">scan</string>
    <string name="batik_name">batik batik</string>
    <string name="message_email">Please fill in your Email</string>
    <string name="message_password">Please fill in your Password</string>
    <string name="message_username">Please fill in your Username</string>
    <string name="batik_address">address</string>
    <string name="retry">Retry</string>
    <string name="title_maps">Maps</string>
    <string name="save_favorite">save favorite</string>
    <string name="title_detection">detection</string>
    <string name="desc_text">Do you want the Batik pattern like in the picture above to be recognized? Come on, get to know the Batik motif.</string>
    <string name="button_detec">detect now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_maps">access the maps</string>
    <string name="descmaps_text">You can get recommendations for the nearest Batik shop. Access the map button now</string>

</resources>